<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="de.thomas.pettinger.motiussuperapp.LoginFragment">

    <TextView
        android:id="@+id/login_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:text="@string/login_headline"/>

    <TextView
        android:id="@+id/login_desc"
        android:layout_below="@id/login_headline"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="300dp"
        android:layout_marginBottom="12dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"
        android:text="@string/login_desc"/>

    <EditText
        android:id="@+id/login_username"
        android:hint="@string/login_username_hint"
        android:layout_below="@id/login_desc"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:hint="@string/login_username_password"
        android:layout_below="@id/login_username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_login"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:text="@string/button_login"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />
</RelativeLayout>
